--- a/assets/scss/components/_swiper-slider.scss
+++ b/assets/scss/components/_swiper-slider.scss
@@ -1,87 +1,107 @@
 .swiper {
-    margin-inline: auto;
-    // padding: $ic-300 0 !important;
+  margin-inline: auto;
+  // padding: $ic-300 0 !important;
 }
 
 .swiper-wrapper {
-    height: 700px !important;
+  height: 700px !important;
 }
 
 .swiper-button-container {
-    position: absolute;
-    z-index: 2;
-    top: -1px;
-    right: 0;
-    width: 100%;
-    height: 50px;
-    justify-content: space-evenly;
+  position: absolute;
+  z-index: 2;
+  top: -1px;
+  right: 0;
+  width: 100%;
+  height: 50px;
+  justify-content: space-evenly;
 }
 
 .swiper-pagination {
-    z-index: 8 !important;
+  z-index: 8 !important;
 }
 
 .swiper-pagination-bullet {
-    background-color: $white !important;
-    transform: scale(1);
-    transition: transform $transition;
+  background-color: $white !important;
+  transform: scale(1);
+  transition: transform $transition;
 }
 
 .swiper-pagination-bullet-active {
-    transform: scale(2);
+  transform: scale(2);
 }
 
 .swiper-button-prev,
 .swiper-button-next {
-    width: $ic-600 !important;
-    height: $ic-600 !important;
-    background-color: $primary-color;
-    transform: rotate(45deg);
+  width: $ic-600 !important;
+  height: $ic-600 !important;
+  background-color: $primary-color;
+  transform: rotate(45deg);
 }
 
 .swiper-button-prev svg,
 .swiper-button-next svg {
-    width: $ic-300;
-    height: $ic-300;
-    fill: $egg-shell;
-    transform: rotate(-45deg);
+  width: $ic-300;
+  height: $ic-300;
+  fill: $egg-shell;
+  transform: rotate(-45deg);
 }
 
 .swiper-button-next {
-    right: 0 !important;
+  //   right: 27.5rem !important;
+  //   top: 30% !important;
+
+  right: -0.5rem !important;
+  top: 20rem !important;
+
+  @include breakpoint(md) {
+    right: -0.5rem !important;
+  }
+
+  @include breakpoint(lg) {
+    right: 28.5rem !important;
+  }
 }
 
 .swiper-button-prev {
-    left: 0 !important;
+  //   left: 2 !important;
+  //   top: 30% !important;
+
+  left: -0.5rem !important;
+  top: 20rem !important;
+
+  @include breakpoint(md) {
+  }
 }
 
-.swiper-button-next::after, .swiper-button-prev::after {
-    display: none;
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  display: none;
 }
 
 .swiper-slide {
-    overflow: hidden;
+  overflow: hidden;
 
-    img {
-        object-fit: cover;
-        height: 100%;
-    }
+  img {
+    object-fit: cover;
+    height: 100%;
+  }
 }
 
 .testimonials-pagination {
-    position: absolute;
-    left: 50% !important;
-    transform: translateX(-50%);
-    width: auto !important;
-    bottom: unset !important;
+  position: absolute;
+  left: 50% !important;
+  transform: translateX(-50%);
+  width: auto !important;
+  bottom: unset !important;
 
-    .swiper-pagination-bullet {
-        background-color: rgba($accent-color, 1) !important;
-        opacity: .5 !important;
-    }
+  .swiper-pagination-bullet {
+    background-color: rgba($accent-color, 1) !important;
+    opacity: 0.5 !important;
+  }
 
-    .swiper-pagination-bullet-active {
-        background-color: $accent-color !important;
-        opacity: 1 !important;
-    }
+  .swiper-pagination-bullet-active {
+    background-color: $accent-color !important;
+    opacity: 1 !important;
+  }
 }
